Fix animated buttons text background width (now covers the entire text + margin)

--- a/src/App.css
+++ b/src/App.css
@@ -427,8 +427,7 @@ a:visited {
 }
 
 .animatedButton.squared {
-  aspect-ratio: none;
-  width: auto;
+  aspect-ratio: auto;
 }
 
 .animatedButtonContainer {
@@ -438,6 +437,11 @@ a:visited {
   justify-content: center;
   align-items: center;
   position: relative;
+}
+
+.animatedButton.squared .animatedButtonContainer {
+  width: auto;
+  width: 100%;
 }
 
 .animatedButtonIcon {
@@ -460,6 +464,7 @@ a:visited {
 
 .animatedButtonBackground.squared {
   border-radius: 5px;
+  width: 110%;
 }
 
 .animatedButton:hover .animatedButtonBackground {
